Fix logo cropped

--- a/web/assets/variables.scss
+++ b/web/assets/variables.scss
@@ -122,6 +122,6 @@ label[style].theme--light.v-label {
 .v-input input {
   padding-left: 10px;
 }
-.v-avatar .v-image {
+.v-avatar.rounded-50 .v-image {
   border-radius: 50%;
 }
